@@ -1,5 +1,11 @@
 2005-03-31  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* configure.in:
+	* src/procman.c: (cb_server), (main): Added dependency on libbacon.
+	Spawn only one instance of gnome-system-monitor.
+
+2005-03-31  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/callbacks.c: (cb_switch_page), (cb_change_current_page):
 	* src/callbacks.h:
 	* src/interface.c: (create_main_window): Fixed graph drawing when
